--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Quiz Game!</title>
 </head>
-<body>
+<body class="bg-light text-dark">
+    <main id="root">
+        <h1 class="text-center">Quiz game!</h1>
+        <button id="startGameBtn">"Press to start!"</button>
+    
+    </main>
     
 </body>
 <script src="javascript.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </html>
