Tried reformatting code to regain some functionality, but the game does not function.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <link rel="stylesheet" href="style.css">
     <title>Quiz Game!</title>
 </head>
-<body class="bg-light text-dark">
-    <main id="root">
+<body class="Quiz">
+    <main id="quiz">
         <h1 class="text-center">Quiz game!</h1>
         <button id="startGameBtn">"Press to start!"</button>
-    
     </main>
+
+    <card>
+        <input type="radio" name="question" value="letter">
+        <input class="question">
+        <input class="answers"> 
+    </card>
     
 </body>
 <script src="javascript.js"></script>
