Tried last ditch effort to get quiz to function.

--- a/index.html
+++ b/index.html
@@ -4,18 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Quiz Game!</title>
+    <title>Coding quiz game!</title>
 </head>
 <body class="Quiz">
     <main id="quiz">
-        <h1 class="text-center">Quiz game!</h1>
+        <h1 class="text-center">Coding quiz game!</h1>
         <button id="startGameBtn">"Press to start!"</button>
     </main>
 
     <card>
-        <input type="radio" name="question" value="letter">
-        <input class="question">
-        <input class="answers"> 
+        
+        <input type="radio" name="answer-1" value="letter">
+        <input type="radio" name="answer-2" value="letter">
+        <input type="radio" name="answer-3" value="letter">
+        <input type="radio" name="answer-4" value="letter">
+
+        <div class="question">
+        <button id="submit"></button>
+        <div id="answers">
+
     </card>
     
 </body>
