changed local file structure to make projects display alphabetically in finder.

--- a/index.html
+++ b/index.html
@@ -6,26 +6,19 @@
     <link rel="stylesheet" href="style.css">
     <title>Coding quiz game!</title>
 </head>
-<body class="Quiz">
-    <main id="quiz">
-        <h1 class="text-center">Coding quiz game!</h1>
-        <button id="startGameBtn">"Press to start!"</button>
-    </main>
+<body>
+    <main>
+        <h1 class="banner">Coding quiz game!</h1>
+    <div id="display">
+    </div>
+    <button id="start-game-button"></button>
+    <div id="quiz">
+    </div>
+    <div id="questions"></div>
 
-    <card>
-        
-        <input type="radio" name="answer-1" value="letter">
-        <input type="radio" name="answer-2" value="letter">
-        <input type="radio" name="answer-3" value="letter">
-        <input type="radio" name="answer-4" value="letter">
-
-        <div class="question">
-        <button id="submit"></button>
-        <div id="answers">
-
-    </card>
+</main>
     
-</body>
 <script src="javascript.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+</body>
 </html>
