--- a/index.html
+++ b/index.html
@@ -7,18 +7,17 @@
     <title>Coding quiz game!</title>
 </head>
 <body>
+    <div class="container">
     <main>
         <h1 class="banner">Coding quiz game!</h1>
-    <div id="display">
+    <button class="start-game-button">Click to Start the Game!</button>
+    <div class= "question">
     </div>
-    <button id="start-game-button"></button>
-    <div id="quiz">
-    </div>
-    <div id="questions"></div>
-
+</body>
 </main>
     
 <script src="javascript.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+</div>
 </body>
 </html>
