--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <main>
         <h1 class="banner">Coding quiz game!</h1>
     <button class="start-game-button">Click to Start the Game!</button>
-    <div class= "question">
-    </div>
-</body>
+    <form id="quiz-form">
+    <section id ="quiz">
+    </section>
+    <button type="button" class="submit-button">Submit The Quiz!</button>
+    </form>
 </main>
-    
+</div>
 <script src="javascript.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-</div>
 </body>
 </html>
