Fixed questions, which are now rendering, but next button not working

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <form id="quiz-form">
     <section id ="quiz">
     </section>
+    <button class = "next-button">Next</button>
     <button type="button" class="submit-button">Submit The Quiz!</button>
     </form>
 </main>
