Fixed quiz rendering and submission button logic

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <form id="quiz-form">
     <section id ="quiz">
     </section>
-    <button class = "next-button">Next</button>
-    <button type="button" class="submit-button">Submit The Quiz!</button>
+    <button type="button" class = "next-button"></button>
+    <button type="button" id="submit-button">Submit The Quiz!</button>
     </form>
 </main>
 </div>
