Cleaned up commented code and added comments for final push

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Coding quiz game!</title>
 </head>
 <body>
-    <div class="container">
+
     <main>
         <h1 class="banner">Coding quiz game!</h1>
-    <button class="start-game-button">Click to Start the Game!</button>
-    <form id="quiz-form">
+    <button type="button" class="start-game-button">Click to Start the Game!</button>
+    <form>
     <section id ="quiz">
     </section>
-    <button type="button" class = "next-button"></button>
+    <button type="button" class="next-button"></button>
     <button type="button" id="submit-button">Submit The Quiz!</button>
     </form>
 </main>
