Added quiz timer

--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
         <h1 class="banner">Coding quiz game!</h1>
     <button type="button" class="start-game-button">Click to Start the Game!</button>
     <form>
+        <h1 class="time"></h1>
     <section id ="quiz">
     </section>
     <button type="button" class="next-button"></button>
     <button type="button" id="submit-button">Submit The Quiz!</button>
     </form>
 </main>
-</div>
 <script src="javascript.js"></script>
+<script src="https://cdn.tailwindcss.com"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </body>
 </html>
