Added tailwind CDN to assist in fixing styling

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Coding quiz game!</title>
+    <title>JavaScript quiz game!</title>
 </head>
-<body>
+<body class = "container mx-auto">
 
     <main>
-        <h1 class="banner">Coding quiz game!</h1>
-    <button type="button" class="start-game-button">Click to Start the Game!</button>
+        <h1 class="text-xl border border-white font-bold">Timed JavaScript Quiz Game </h1>
+    <button type="button" class="start-game-button text-xl border border-black">Click to Start the Game!</button>
     <form>
         <h1 class="time"></h1>
     <section id ="quiz">
