--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body class = "container mx-auto">
 
-    <main>
-        <h1 class="text-xl border border-white font-bold">Timed JavaScript Quiz Game </h1>
-    <button type="button" class="start-game-button text-xl border border-black">Click to Start the Game!</button>
+    <main class="flex flex-col items-center font-mono">
+        <h1 class="text-4xl font-bold mb-20 mt-20">Timed JavaScript Quiz Game </h1>
+        <h2 class="font-bold text-xl mb-20">Test your skills in a timed quiz about the programming language JavaScript!</h2>
+    <button type="button" class="start-game-button font-bold text-2xl border border-black">Click to Start the Game!</button>
     <form>
         <h1 class="time"></h1>
     <section id ="quiz">
